--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/app.css">
     <script src="bower_components/angular/angular.js"></script>
-    <!--<script src="bower_components/angular-mocks/angular-mocks.js"></script>-->
+    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/app.js"></script>
+    <!--<script src="js/angular-mock-backend.js"></script>-->
 </head>
 <body >
     <div ng-view></div>
